tests/files/type_checker_tests/should_fail/086.cmdr
//Should fail indexing if empty array
y = 1;
x = [][y];
